<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Angels</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="menu_settings">Menu Settings</string>
    <string name="input_hint">Please enter your number</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="ope_MR">MR</string>
    <string name="ope_MC">MC</string>
    <string name="ope_Back">C</string>
    <string name="dot">.</string>
    <string name="Multi">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="pos_neg">+/-</string>
    <string name="equal">=</string>
    <string name="ABOUT">ABOUT</string>
    <string name="QUIT">QUIT</string>
    <string name="title_activity_about">My Angels</string>
    <string name="about">Author: Bright Halo</string>
    <string name="welcome">\nMyAngels turns your phone into an SMS hub for focused chat sessions with 
        your friends.\n\nMyAngels is easy to use. Simply select up to 5 members, then 
        start messaging.\n\nWe built this app with emergency communication in mind. But feel free to use it 
        for any other reason. \n\nPlease be aware that standard sms charges will apply from your carrier.</string>
    <string name="instruction">MyAngels is easy to use. Simply select up to 5 members, then 
        start messaging. </string>
    <string name="warning">Please be aware that standard sms charges will apply from your carrier.</string>
</resources>
